src/main/metadata-au/objects/Pre_Order__c.object
<CustomObject>
    <description>Contain all pre-order information that has been requested by a customer and vehicle pre-order information.</description>
    <fields>
        <fullName>ClosedReason__c</fullName>
        <label>Closed Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Vehicle purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait time too long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased Competitor Vehicle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pre Orders</relationshipLabel>
        <relationshipName>Pre_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VehicleInterested__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle Interested</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Pre Orders</relationshipLabel>
        <relationshipName>Pre_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pre Order</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Pre Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>